# bluepill_rs

./: Cargo.toml  Embed.toml  README.md  openocd.cfg  openocd.gdb  rust-toolchain.toml
src/: main.rs
